hphp/hack/test/typecheck/references/call_time_reference3.php.exp
File "call_time_reference3.php", line 4, characters 9-11:
Taking a value by reference is no longer supported in Hack. (Typing[4299])
