hphp/hack/test/typecheck/references/call_time_reference3.php
<?hh // partial

function test($x, $y) {
  isset(&$x);
}
